Napravljen i dizajniran menu (navigacija)

--- a/html/predmet.html
+++ b/html/predmet.html
@@ -8,6 +8,156 @@
     <link rel="stylesheet" href="../css/predmet.css">
 </head>
 <body>
-    
+    <div id="meni">
+        <div class="meni1">
+            <span><a href="#">Računarstvo i informatika</a></span> <br>
+            <ul class="meni2">
+                <li><a href="#">RS 1</a></li>
+                <li><a href="#">RS 1</a></li>
+            </ul>
+            <ul class="meni2">
+                <li><a href="#">BSc 1</a></li>
+                <li><a href="#">BSc 2</a></li>
+                <li><a href="#">BSc 3</a></li>
+            </ul>
+            <ul class="meni2">
+                <li><a href="#">MSc 1</a></li>
+                <li><a href="#">MSc 2</a></li>
+            </ul>
+        </div>
+
+        <div class="meni1">
+            <span><a href="#">Elektroenergetika</a></span> <br>
+            <ul class="meni2">
+                <li><a href="#">BSc 1</a></li>
+                <li><a href="#">BSc 2</a></li>
+                <li><a href="#">BSc 3</a></li>
+            </ul>
+            <ul class="meni2">
+                <li><a href="#">MSc 1</a></li>
+                <li><a href="#">MSc 2</a></li>
+            </ul>
+        </div>
+
+        <div class="meni1">
+            <span><a href="#">Automatika i elektronika</a></span> <br>
+            <ul class="meni2">
+                <li><a href="#">BSc 1</a></li>
+                <li><a href="#">BSc 2</a></li>
+                <li><a href="#">BSc 3</a></li>
+            </ul>
+            <ul class="meni2">
+                <li><a href="#">MSc 1</a></li>
+                <li><a href="#">MSc 2</a></li>
+            </ul>
+        </div>
+
+        <div class="meni1">
+            <span><a href="#">Telekomunikacije</a></span> <br>
+            <ul class="meni2">
+                <li><a href="#">BSc 1</a></li>
+                <li><a href="#">BSc 2</a></li>
+                <li><a href="#">BSc 3</a></li>
+            </ul>
+            <ul class="meni2">
+                <li><a href="#">MSc 1</a></li>
+                <li><a href="#">MSc 2</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    armin
+
+
+
+
+
+
 </body>
 </html>
