Dodane osnovne informacije o predmetu u zaglavlje

--- a/html/prisustvo.html
+++ b/html/prisustvo.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/prisustvo.css">
     <title>Prisutstvo</title>
 </head>
 <body>
+
+    <div class="predmet_info">
+        <h1>P1</h1>
+        <h2>BSc 2</h2>
+        <h3>Računarstvo i informatika</h3>
+    </div>
     
 </body>
 </html>
