Dodani dummy podaci za rad sa tabelom

--- a/html/prisustvo.html
+++ b/html/prisustvo.html
@@ -14,6 +14,71 @@
         <h2>BSc 2</h2>
         <h3>Računarstvo i informatika</h3>
     </div>
-    
+
+    <table>
+        <tr>
+            <th>Ime i prezime</th>
+            <th>Index</th>
+            <th>I</th>
+            <th>II</th>
+            <th>IV</th>
+            <th>V</th>
+            <th>VI</th>
+            <th colspan="5">VII</th>
+            <th colspan="0">VIII-XV</th>
+        </tr>
+
+        <!--Jedan student!-->
+        <tr>
+            <td rowspan="2">Neko nekić</td>
+            <td rowspan="2">12345</td>
+            <td rowspan="2">100%</td>
+            <td rowspan="2">100%</td>
+            <td rowspan="2">100%</td>
+            <td rowspan="2">100%</td>
+            <td rowspan="2">100%</td>
+            <td>P <br> 1</td>
+            <td>P <br> 2</td>
+            <td>P <br> 3</td>
+            <td>V <br> 1</td>
+            <td>V <br> 2</td>
+            <td colspan="0" rowspan="2"></td>
+        </tr>
+        <tr>
+            <td> <br> </td>
+            <td> <br> </td>
+            <td> <br> </td>
+            <td> <br> </td>
+            <td> <br> </td>
+        </tr>
+        
+
+        <!--Jedan student!-->
+        <tr>
+            <td rowspan="2">Neko nekić</td>
+            <td rowspan="2">12345</td>
+            <td rowspan="2">100%</td>
+            <td rowspan="2">100%</td>
+            <td rowspan="2">100%</td>
+            <td rowspan="2">100%</td>
+            <td rowspan="2">100%</td>
+            <td>P <br> 1</td>
+            <td>P <br> 2</td>
+            <td>P <br> 3</td>
+            <td>V <br> 1</td>
+            <td>V <br> 2</td>
+            <td colspan="0" rowspan="2"></td>
+        </tr>
+        <tr>
+            <td> <br> </td>
+            <td> <br> </td>
+            <td> <br> </td>
+            <td> <br> </td>
+            <td> <br> </td>
+        </tr>
+
+
+
+    </table>
 </body>
 </html>
