Dodane boje za celije koje oznacavaju prisutstvo

--- a/html/prisustvo.html
+++ b/html/prisustvo.html
@@ -45,11 +45,11 @@
             <td colspan="0" rowspan="2"></td>
         </tr>
         <tr>
-            <td> <br> </td>
-            <td> <br> </td>
-            <td> <br> </td>
-            <td> <br> </td>
-            <td> <br> </td>
+            <td class="zelena"> <br> </td>
+            <td class="zelena"> <br> </td>
+            <td class="crvena"> <br> </td>
+            <td class="crvena"> <br> </td>
+            <td class="zelena"> <br> </td>
         </tr>
         
 
@@ -70,11 +70,11 @@
             <td colspan="0" rowspan="2"></td>
         </tr>
         <tr>
-            <td> <br> </td>
-            <td> <br> </td>
-            <td> <br> </td>
-            <td> <br> </td>
-            <td> <br> </td>
+            <td class="zelena"> <br> </td>
+            <td class="zelena"> <br> </td>
+            <td class="crvena"> <br> </td>
+            <td class="crvena"> <br> </td>
+            <td class="zelena"> <br> </td>
         </tr>
 
 
