Dodano jos dummy podataka u tabelu

--- a/html/prisustvo.html
+++ b/html/prisustvo.html
@@ -55,13 +55,13 @@
 
         <!--Jedan student!-->
         <tr>
-            <td rowspan="2">Neko nekić</td>
-            <td rowspan="2">12345</td>
+            <td rowspan="2">Neko nekić 1</td>
+            <td rowspan="2">23441</td>
             <td rowspan="2">100%</td>
             <td rowspan="2">100%</td>
+            <td rowspan="2">3%</td>
             <td rowspan="2">100%</td>
-            <td rowspan="2">100%</td>
-            <td rowspan="2">100%</td>
+            <td rowspan="2">5%</td>
             <td>P <br> 1</td>
             <td>P <br> 2</td>
             <td>P <br> 3</td>
@@ -77,6 +77,29 @@
             <td class="zelena"> <br> </td>
         </tr>
 
+
+        <tr>
+            <td rowspan="2">Neko nekić 3</td>
+            <td rowspan="2">53545</td>
+            <td rowspan="2">90%</td>
+            <td rowspan="2">100%</td>
+            <td rowspan="2">3%</td>
+            <td rowspan="2">60%</td>
+            <td rowspan="2">5%</td>
+            <td>P <br> 1</td>
+            <td>P <br> 2</td>
+            <td>P <br> 3</td>
+            <td>V <br> 1</td>
+            <td>V <br> 2</td>
+            <td colspan="0" rowspan="2"></td>
+        </tr>
+        <tr>
+            <td class="zelena"> <br> </td>
+            <td class="crvena"> <br> </td>
+            <td class="zelena"> <br> </td>
+            <td class="crvena"> <br> </td>
+            <td class="zelena"> <br> </td>
+        </tr>
 
 
     </table>
