Posljednja kolona proširena da izgleda kao u zahtjevima

--- a/html/prisustvo.html
+++ b/html/prisustvo.html
@@ -16,6 +16,8 @@
     </div>
 
     <table>
+        <col><col><col><col><col><col><col><col><col><col><col><col>
+        <col class="zadnja_kolona">
         <tr>
             <th>Ime i prezime</th>
             <th>Index</th>
