Ime i prezime prebaceno u novi red

--- a/html/prisustvo.html
+++ b/html/prisustvo.html
@@ -19,7 +19,7 @@
         <col><col><col><col><col><col><col><col><col><col><col><col>
         <col class="zadnja_kolona">
         <tr>
-            <th>Ime i prezime</th>
+            <th>Ime i <br> prezime</th>
             <th>Index</th>
             <th>I</th>
             <th>II</th>
