--- a/html/prisustvo.html
+++ b/html/prisustvo.html
@@ -39,11 +39,11 @@
             <td rowspan="2">100%</td>
             <td rowspan="2">100%</td>
             <td rowspan="2">100%</td>
-            <td>P <br> 1</td>
-            <td>P <br> 2</td>
-            <td>P <br> 3</td>
-            <td>V <br> 1</td>
-            <td>V <br> 2</td>
+            <td class="center">P <br> 1</td>
+            <td class="center">P <br> 2</td>
+            <td class="center">P <br> 3</td>
+            <td class="center">V <br> 1</td>
+            <td class="center">V <br> 2</td>
             <td colspan="0" rowspan="2"></td>
         </tr>
         <tr>
@@ -64,11 +64,11 @@
             <td rowspan="2">3%</td>
             <td rowspan="2">100%</td>
             <td rowspan="2">5%</td>
-            <td>P <br> 1</td>
-            <td>P <br> 2</td>
-            <td>P <br> 3</td>
-            <td>V <br> 1</td>
-            <td>V <br> 2</td>
+            <td class="center">P <br> 1</td>
+            <td class="center">P <br> 2</td>
+            <td class="center">P <br> 3</td>
+            <td class="center">V <br> 1</td>
+            <td class="center">V <br> 2</td>
             <td colspan="0" rowspan="2"></td>
         </tr>
         <tr>
@@ -88,11 +88,11 @@
             <td rowspan="2">3%</td>
             <td rowspan="2">60%</td>
             <td rowspan="2">5%</td>
-            <td>P <br> 1</td>
-            <td>P <br> 2</td>
-            <td>P <br> 3</td>
-            <td>V <br> 1</td>
-            <td>V <br> 2</td>
+            <td class="center">P <br> 1</td>
+            <td class="center">P <br> 2</td>
+            <td class="center">P <br> 3</td>
+            <td class="center">V <br> 1</td>
+            <td class="center">V <br> 2</td>
             <td colspan="0" rowspan="2"></td>
         </tr>
         <tr>
