Popravljene neke greske uocene putem html i css validatora

--- a/html/prisustvo.html
+++ b/html/prisustvo.html
@@ -27,7 +27,7 @@
             <th>V</th>
             <th>VI</th>
             <th colspan="5">VII</th>
-            <th colspan="0">VIII-XV</th>
+            <th >VIII-XV</th>
         </tr>
 
         <!--Jedan student!-->
@@ -44,7 +44,7 @@
             <td class="center">P <br> 3</td>
             <td class="center">V <br> 1</td>
             <td class="center">V <br> 2</td>
-            <td colspan="0" rowspan="2"></td>
+            <td rowspan="2"></td>
         </tr>
         <tr>
             <td class="zelena"> <br> </td>
@@ -69,7 +69,7 @@
             <td class="center">P <br> 3</td>
             <td class="center">V <br> 1</td>
             <td class="center">V <br> 2</td>
-            <td colspan="0" rowspan="2"></td>
+            <td rowspan="2"></td>
         </tr>
         <tr>
             <td class="zelena"> <br> </td>
@@ -93,7 +93,7 @@
             <td class="center">P <br> 3</td>
             <td class="center">V <br> 1</td>
             <td class="center">V <br> 2</td>
-            <td colspan="0" rowspan="2"></td>
+            <td rowspan="2"></td>
         </tr>
         <tr>
             <td class="zelena"> <br> </td>
