Dodana osnovna struktura js modula

--- a/html/prisustvo.html
+++ b/html/prisustvo.html
@@ -105,5 +105,8 @@
 
 
     </table>
+
+    <script src="../moduli/TabelaPrisustvo.js"></script>
+    <script src="../moduli/prisustvo.js"></script>
 </body>
 </html>
