Dodana responzivnost zadnjoj koloni kroz javascript!

--- a/html/prisustvo.html
+++ b/html/prisustvo.html
@@ -103,7 +103,7 @@
             <td> <br> </td>
         </tr>
         <col><col><col><col><col><col><col><col><col><col><col><col>
-        <col class="zadnja_kolona">
+        <col style="width: 40%">
     </table>
 
     <script src="../moduli/TabelaPrisustvo.js"></script>
