Izvršen refaktoring metode 'Kreiraj tabelu'

--- a/html/prisustvo.html
+++ b/html/prisustvo.html
@@ -106,7 +106,7 @@
         <col style="width: 40%">
     </table>
 
-    <script src="../moduli/TabelaPrisustvo.js"></script>
-    <script src="../moduli/prisustvo.js"></script>
+    <script src="../scripts/TabelaPrisustvo.js"></script>
+    <script src="../scripts/prisustvo.js"></script>
 </body>
 </html>
