Refaktoring metoda i dodavanje imena predmeta na stranicu!

--- a/html/prisustvo.html
+++ b/html/prisustvo.html
@@ -10,9 +10,9 @@
 <body>
 
     <div class="predmet_info">
-        <h1>P1</h1>
-        <h2>BSc 2</h2>
-        <h3>Računarstvo i informatika</h3>
+        <h1>Prisustvo na predmetu</h1>
+        <h2>Elektrotehnički fakultet</h2>
+        <h3>Sarajevo</h3>
     </div>
 
 
