Povezan postLogin sa serverom - osnovna povezanost

--- a/public/html/prijava.html
+++ b/public/html/prijava.html
@@ -24,7 +24,7 @@
             <label for="password">Lozinka</label>
             <input type="password" class="form-control" id="password" placeholder="Enter password">
           </div>
-          <button type="submit" class="btn btn-primary btn-block">Prijava</button>
+          <button type="button" onclick="PoziviAjax.postLogin(document.getElementById('username'),document.getElementById('password'),(err, data) => {console.log(err); console.log(data)})" class="btn btn-primary btn-block">Prijava</button>
         </form>
       </div>
     </div>
