--- a/public/html/predmeti.html
+++ b/public/html/predmeti.html
@@ -22,10 +22,10 @@
   </nav>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-2 bg-light no_padding">
+      <div class="col-2 bg-light no_padding min_width">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link" href="#">Link 1</a>
+            <a class="nav-link" href="#">Matematika u cjelobrojnom programiranju</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link 2</a>
