--- a/public/html/predmeti.html
+++ b/public/html/predmeti.html
@@ -16,7 +16,7 @@
     <a class="navbar-brand" href="#">Greetings,</a>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item logout">
-            <a class="nav-link" onclick="PoziviAjax.postLogout((err, data) =>{if(err){console.log(err); return;} window.location.replace('http://localhost:3000/prijava');})">Logout</a>
+            <a class="nav-link" href="#" onclick="PoziviAjax.postLogout((err, data) =>{if(err){console.log(err); return;} window.location.replace('http://localhost:3000/prijava');})">Logout</a>
         </li>
     </ul>
   </nav>
