Dodan alert box za errore na prijavi

--- a/public/html/prijava.html
+++ b/public/html/prijava.html
@@ -28,6 +28,12 @@
         </form>
       </div>
     </div>
+    <br><br>
+    <div class="row justify-content-center">
+        <div id="upozorenje" class="alert alert-danger" role="alert" hidden="true">
+            Prijava nije bila uspješna!
+        </div>
+    </div>
   </div>
 
   <script src="scripts/prijavaHelper.js"></script>
