--- a/public/html/prijava.html
+++ b/public/html/prijava.html
@@ -36,7 +36,7 @@
     </div>
   </div>
 
-  <script src="scripts/prijavaHelper.js"></script>
+  <script src="scripts/prijava.js"></script>
   <script src="scripts/poziviAjax.js"></script>
 </body>
 </html>
