--- a/public/html/prisustvo.html
+++ b/public/html/prisustvo.html
@@ -21,6 +21,7 @@
         
     </div>
 
+    <script src="scripts/poziviAjax.js"></script>
     <script src="scripts/TabelaPrisustvo.js"></script>
     <script src="scripts/prisustvo.js"></script>
 </body>
