--- a/public/html/predmeti.html
+++ b/public/html/predmeti.html
@@ -18,7 +18,7 @@
     <a id="username" class="navbar-brand" href="#">Greetings,</a>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item logout">
-            <a class="nav-link" href="#" onclick="PoziviAjax.postLogout(callbackLogout)">Logout</a>
+            <a class="nav-link" href="#" onclick="PoziviAjax.postLogout(callbackLogout)">Odjava</a>
         </li>
     </ul>
   </nav>
