Vraćeno ispisivanje tabela na predmeti.html, popravljen UI dizajn na predmeti.html

--- a/public/html/predmeti.html
+++ b/public/html/predmeti.html
@@ -29,6 +29,12 @@
         </ul>
       </div>
     </div>
+    <br><br>
+    <div class="row justify-content-center">
+        <div id="divSadrzaj">
+
+        </div>    
+    </div>
   </div>
 
   <script src="scripts/poziviAjax.js"></script>
